# polyglot-hello

./: .gitignore  Cargo.toml  README.md  bom.json  build.gradle.kts  go.mod  package-lock.json  package.json  polyglot-hello.cdx.json  pom.xml  requirements.txt  sbom-go.json  sbom-npm.json  sbom-python.json  settings.gradle.kts
cmd/hello/: main.go
src/main/java/com/polyglot/hello/: Hello.java
src/main/js/: hello.js
src/main/python/: hello.py
src/main/rs/: main.rs
