[package]
name = "polyglot-hello"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hello"
path = "src/main/rs/main.rs"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
chrono = "0.4.44"
clap = "4.6.0"
mime_guess = "2.0.5"
prost = "0.14.3"
prost-types = "0.14.3"
reqwest = "0.13.2"
rusqlite = "0.39.0"
rust-embed = "8.11.0"
serde = "1.0.228"
serde_json = "1.0.149"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = "1.50.0"
tokio-stream = "0.1.18"
tonic = "0.14.5"
tonic-build = "0.14.5"
tonic-prost = "0.14.5"
tonic-prost-build = "0.14.5"
tower-http = "0.6.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = "1.23.0"

[build-dependencies]
tonic-build = "0.14.5"
tonic-prost-build = "0.14.5"
